<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp16"
    tools:context=".presentation.screen.genderiza.GenderizeActivity">

    <EditText
        android:id="@+id/ag_name"
        android:layout_width="match_parent"
        android:hint="@string/your_name"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ag_send"
        android:text="@string/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <TextView
        android:id="@+id/ag_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp16" />

</LinearLayout>