<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.main.MainActivity">
    <TextView
        android:id="@+id/am_output_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        app:layout_constraintBottom_toTopOf="@id/am_button_insert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/am_button_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp64"
        android:text="@string/insert"
        app:layout_constraintTop_toBottomOf="@id/am_output_tv" />

    <Button
        android:id="@+id/am_button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/am_button_insert" />

    <Button
        android:id="@+id/am_button_to_dogs_cats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_dogs_and_cats"
        android:layout_marginBottom="@dimen/dp16"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/am_button_to_genderize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_genderize"
        android:layout_marginBottom="@dimen/dp16"
        app:layout_constraintBottom_toTopOf="@id/am_button_to_dogs_cats"/>




</androidx.constraintlayout.widget.ConstraintLayout>